# poynter2

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  app.json  manage.py  pyproject.toml  requirements.txt  setup.cfg  uwsgi.ini
poynter/config/: asgi.py  config.py  settings.py  urls.py  wsgi.py
poynter/core/: apps.py
poynter/points/: admin.py  apps.py  consumers.py  forms.py  models.py  ops.py  routing.py  tests.py  urls.py  views.py  views_htmx.py
poynter/points/migrations/: 0001_initial.py  0002_remove_vote_message_vote_vote.py  0003_remove_vote_profile_remove_pointingsession_moderator_and_more.py  0004_remove_vote_log_date_vote_voter.py  0005_pointingsession_moderator.py  0006_pointingsession_is_open.py  0007_project_alter_pointingsession_session_date_and_more.py  0008_project_alter_pointingsession_session_date_and_more-copy.py  0009_alter_pointingsession_is_open.py  0010_ticket_active.py  0011_alter_ticket_active.py  0012_rename_pointingsession_space.py  0013_alter_space_options_remove_space_session_date.py  0014_alter_space_options_alter_space_unique_together.py  0015_space_slug.py  0016_rename_pointing_session_ticket_space.py  0017_space_members.py  0018_ticket_voted_delete_vote.py  0020_snapshot.py  (+7 more)
poynter/someapp/: admin.py  apps.py  models.py  views.py
poynter/templates/: base.html
proj_1/config/: config.py  settings.py  test_settings.py  urls.py  wsgi.py
proj_1/core/: admin.py  apps.py
proj_1/someapp/: admin.py  apps.py  tests.py  views.py
proj_1/templates/: base.html  home.html
requirements/: base.in  dev.in  dev.txt
(+40 files in other folders)
